update cassandra document — CMS GC